Add config class and use it when necessary (#20)
Co-authored-by: Tyler Pearn <tyler@outerloop.io>
Co-authored-by: Tom Stephen <tom.stephen@icloud.com>

--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -13,16 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%load_ext memory_profiler"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -36,12 +27,12 @@
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -60,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,17 +60,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Data has 4308 observations, we use 6 random variables in the model. We work in 64 bit precision, so each element is 8 bytes. For 5000 draws, the array of draws is about 0.96 GB.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "n_obs = df['chid'].unique().shape[0]\n",
         "n_vars = 6\n",
@@ -97,279 +80,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:2025-08-04 21:42:03,524:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-            "2025-08-04 21:42:03,524 INFO jax._src.xla_bridge: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-            "WARNING:2025-08-04 21:42:03,527:jax._src.xla_bridge:794: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
-            "2025-08-04 21:42:03,527 WARNING jax._src.xla_bridge: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
-            "2025-08-04 21:42:06,092 INFO jaxlogit.mixed_logit: Data contains 361 panels.\n",
-            "2025-08-04 21:42:06,093 INFO jaxlogit._optimize: Running minimization with method L-BFGS-B\n",
-            "2025-08-04 21:46:07,598 INFO jaxlogit.mixed_logit: Optimization finished, success = True, final loglike = -3880.18, final gradient max = 1.90e-03, norm = 1.13e-02.\n",
-            "2025-08-04 21:46:07,608 INFO jaxlogit.mixed_logit: Skipping H_inv and grad_n calculation due to skip_std_errs=True\n",
-            "2025-08-04 21:46:07,609 INFO jaxlogit._choice_model: Post fit processing\n",
-            "2025-08-04 21:46:07,903 INFO jaxlogit._choice_model: Optimization terminated successfully.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-            "    Iterations: 95\n",
-            "    Function evaluations: 117\n",
-            "Estimation time= 244.3 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "pf                     -1.0166227     1.0000000    -1.0166227         0.309    \n",
-            "cl                     -0.2327797     1.0000000    -0.2327797         0.816    \n",
-            "loc                     2.3556730     1.0000000     2.3556730        0.0185 *  \n",
-            "wk                      1.6744819     1.0000000     1.6744819        0.0941 .  \n",
-            "tod                    -9.7531665     1.0000000    -9.7531665      3.03e-22 ***\n",
-            "seas                   -9.9133674     1.0000000    -9.9133674       6.4e-23 ***\n",
-            "sd.pf                  -1.3452424     1.0000000    -1.3452424         0.179    \n",
-            "sd.cl                  -0.6834139     1.0000000    -0.6834139         0.494    \n",
-            "sd.loc                  1.7530628     1.0000000     1.7530628        0.0797 .  \n",
-            "sd.wk                   0.9325956     1.0000000     0.9325956         0.351    \n",
-            "sd.tod                  2.3503603     1.0000000     2.3503603        0.0188 *  \n",
-            "sd.seas                 1.2938151     1.0000000     1.2938151         0.196    \n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -3880.184\n",
-            "AIC= 7784.369\n",
-            "BIC= 7860.787\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "peak memory: 9810.14 MiB, increment: 9543.38 MiB\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "%%memit\n",
-        "\n",
         "model = MixedLogit()\n",
-        "res = model.fit(\n",
-        "    X=df[varnames],\n",
-        "    y=df['choice'],\n",
-        "    varnames=varnames,\n",
-        "    ids=df['chid'],\n",
+        "\n",
+        "config = ConfigData(\n",
         "    panels=df['id'],\n",
-        "    alts=df['alt'],\n",
         "    n_draws=n_draws,\n",
-        "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'},\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=None,\n",
         "    optim_method=\"L-BFGS-B\",\n",
         ")\n",
-        "display(model.summary())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-            "  self.pid = os.fork()\n",
-            "2025-08-04 21:46:19,366 INFO jaxlogit.mixed_logit: Data contains 361 panels.\n",
-            "2025-08-04 21:46:19,367 INFO jaxlogit._optimize: Running minimization with method L-BFGS-B\n",
-            "2025-08-04 21:51:32,972 INFO jaxlogit.mixed_logit: Optimization finished, success = True, final loglike = -3880.18, final gradient max = 1.90e-03, norm = 1.13e-02.\n",
-            "2025-08-04 21:51:32,974 INFO jaxlogit.mixed_logit: Skipping H_inv and grad_n calculation due to skip_std_errs=True\n",
-            "2025-08-04 21:51:32,975 INFO jaxlogit._choice_model: Post fit processing\n",
-            "2025-08-04 21:51:33,020 INFO jaxlogit._choice_model: Optimization terminated successfully.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-            "    Iterations: 95\n",
-            "    Function evaluations: 117\n",
-            "Estimation time= 315.9 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "pf                     -1.0166227     1.0000000    -1.0166227         0.309    \n",
-            "cl                     -0.2327797     1.0000000    -0.2327797         0.816    \n",
-            "loc                     2.3556730     1.0000000     2.3556730        0.0185 *  \n",
-            "wk                      1.6744819     1.0000000     1.6744819        0.0941 .  \n",
-            "tod                    -9.7531665     1.0000000    -9.7531665      3.03e-22 ***\n",
-            "seas                   -9.9133674     1.0000000    -9.9133674       6.4e-23 ***\n",
-            "sd.pf                  -1.3452424     1.0000000    -1.3452424         0.179    \n",
-            "sd.cl                  -0.6834139     1.0000000    -0.6834139         0.494    \n",
-            "sd.loc                  1.7530628     1.0000000     1.7530628        0.0797 .  \n",
-            "sd.wk                   0.9325956     1.0000000     0.9325956         0.351    \n",
-            "sd.tod                  2.3503603     1.0000000     2.3503603        0.0188 *  \n",
-            "sd.seas                 1.2938151     1.0000000     1.2938151         0.196    \n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -3880.184\n",
-            "AIC= 7784.369\n",
-            "BIC= 7860.787\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-            "  self.pid = os.fork()\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "peak memory: 4335.09 MiB, increment: 3563.82 MiB\n"
-          ]
-        }
-      ],
-      "source": [
-        "%%memit\n",
         "\n",
-        "model = MixedLogit()\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['choice'],\n",
         "    varnames=varnames,\n",
         "    ids=df['chid'],\n",
-        "    panels=df['id'],\n",
         "    alts=df['alt'],\n",
-        "    n_draws=n_draws,\n",
         "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'},\n",
-        "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    batch_size=1077,  # should result in 4 batches\n",
-        "    optim_method=\"L-BFGS-B\",  # \"trust-region\", \"L-BFGS-B\", \"BFGS\"lver\n",
+        "    config=config\n",
         ")\n",
         "display(model.summary())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-            "  self.pid = os.fork()\n",
-            "2025-08-04 21:53:53,729 INFO jaxlogit.mixed_logit: Data contains 361 panels.\n",
-            "2025-08-04 21:53:53,730 INFO jaxlogit._optimize: Running minimization with method L-BFGS-B\n",
-            "2025-08-04 22:01:20,661 INFO jaxlogit.mixed_logit: Optimization finished, success = True, final loglike = -3880.18, final gradient max = 1.90e-03, norm = 1.13e-02.\n",
-            "2025-08-04 22:01:20,662 INFO jaxlogit.mixed_logit: Skipping H_inv and grad_n calculation due to skip_std_errs=True\n",
-            "2025-08-04 22:01:20,663 INFO jaxlogit._choice_model: Post fit processing\n",
-            "2025-08-04 22:01:20,704 INFO jaxlogit._choice_model: Optimization terminated successfully.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-            "    Iterations: 95\n",
-            "    Function evaluations: 117\n",
-            "Estimation time= 448.7 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "pf                     -1.0166227     1.0000000    -1.0166227         0.309    \n",
-            "cl                     -0.2327797     1.0000000    -0.2327797         0.816    \n",
-            "loc                     2.3556730     1.0000000     2.3556730        0.0185 *  \n",
-            "wk                      1.6744819     1.0000000     1.6744819        0.0941 .  \n",
-            "tod                    -9.7531665     1.0000000    -9.7531665      3.03e-22 ***\n",
-            "seas                   -9.9133674     1.0000000    -9.9133674       6.4e-23 ***\n",
-            "sd.pf                  -1.3452424     1.0000000    -1.3452424         0.179    \n",
-            "sd.cl                  -0.6834139     1.0000000    -0.6834139         0.494    \n",
-            "sd.loc                  1.7530628     1.0000000     1.7530628        0.0797 .  \n",
-            "sd.wk                   0.9325956     1.0000000     0.9325956         0.351    \n",
-            "sd.tod                  2.3503603     1.0000000     2.3503603        0.0188 *  \n",
-            "sd.seas                 1.2938151     1.0000000     1.2938151         0.196    \n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -3880.184\n",
-            "AIC= 7784.369\n",
-            "BIC= 7860.787\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-            "  self.pid = os.fork()\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "peak memory: 3402.84 MiB, increment: 2489.12 MiB\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "%%memit\n",
-        "\n",
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    panels=df['id'],\n",
+        "    n_draws=n_draws,\n",
+        "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+        "    batch_size=1077,  # should result in 4 batches\n",
+        "    optim_method=\"L-BFGS-B\",  # \"trust-region\", \"L-BFGS-B\", \"BFGS\"lver\n",
+        ")\n",
+        "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
         "    y=df['choice'],\n",
         "    varnames=varnames,\n",
         "    ids=df['chid'],\n",
-        "    panels=df['id'],\n",
         "    alts=df['alt'],\n",
-        "    n_draws=n_draws,\n",
         "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'},\n",
+        "    config=config\n",
+        ")\n",
+        "display(model.summary())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    panels=df['id'],\n",
+        "    n_draws=n_draws,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    batch_size=539,\n",
         "    optim_method=\"L-BFGS-B\",\n",
+        "    batch_size=539,\n",
+        ")\n",
+        "\n",
+        "res = model.fit(\n",
+        "    X=df[varnames],\n",
+        "    y=df['choice'],\n",
+        "    varnames=varnames,\n",
+        "    ids=df['chid'],\n",
+        "    alts=df['alt'],\n",
+        "    randvars={'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'},\n",
+        "    config=config\n",
         ")\n",
         "display(model.summary())"
       ]
@@ -390,7 +178,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "venv (3.10.12)",
       "language": "python",
       "name": "python3"
     },
