Remove optimistix trust region option for optimisation

--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -119,7 +119,7 @@
         "    n_draws=n_draws,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=1077,  # should result in 4 batches\n",
-        "    optim_method=\"L-BFGS-B\",  # \"trust-region\", \"L-BFGS-B\", \"BFGS\"lver\n",
+        "    optim_method=\"L-BFGS-B\",  # \"L-BFGS-B\", \"BFGS\"lver\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
