--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,8 @@
     "panels = df['id']\n",
     "randvars = {'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'}\n",
     "\n",
-    "model = MixedLogit()\n",
+    "model_jax = MixedLogit()\n",
+    "model_x = xlogit.MixedLogit()\n",
     "\n",
     "config = ConfigData(\n",
     "    panels=panels,\n",
@@ -84,6 +85,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c96d7b11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df['choice']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "80a8c388",
    "metadata": {},
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "id": "52742f8e",
    "metadata": {},
    "outputs": [
@@ -104,7 +115,7 @@
       "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
       "    Iterations: 80\n",
       "    Function evaluations: 97\n",
-      "Estimation time= 39.3 seconds\n",
+      "Estimation time= 39.0 seconds\n",
       "---------------------------------------------------------------------------\n",
       "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
       "---------------------------------------------------------------------------\n",
@@ -139,7 +150,7 @@
     }
    ],
    "source": [
-    "model.fit(\n",
+    "model_jax.fit(\n",
     "    X=X,\n",
     "    y=y,\n",
     "    varnames=varnames,\n",
@@ -148,8 +159,8 @@
     "    randvars=randvars,\n",
     "    config=config\n",
     ")\n",
-    "display(model.summary())\n",
-    "init_coeff = model.coeff_"
+    "display(model_jax.summary())\n",
+    "init_coeff_jax = model_jax.coeff_"
    ]
   },
   {
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "e89a636c",
    "metadata": {},
    "outputs": [
@@ -174,7 +185,7 @@
       "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
       "    Iterations: 54\n",
       "    Function evaluations: 60\n",
-      "Estimation time= 19.5 seconds\n",
+      "Estimation time= 15.9 seconds\n",
       "---------------------------------------------------------------------------\n",
       "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
       "---------------------------------------------------------------------------\n",
@@ -209,9 +220,7 @@
     }
    ],
    "source": [
-    "model = xlogit.MixedLogit()\n",
-    "\n",
-    "model.fit(\n",
+    "model_x.fit(\n",
     "    X=X,\n",
     "    y=y,\n",
     "    varnames=varnames,\n",
@@ -224,7 +233,8 @@
     "    batch_size=None,\n",
     "    optim_method=\"L-BFGS-B\",\n",
     ")\n",
-    "display(model.summary())"
+    "display(model_x.summary())\n",
+    "init_coeff_x = model_x.coeff_"
    ]
   },
   {
@@ -232,12 +242,23 @@
    "id": "1d7bcacd",
    "metadata": {},
    "source": [
-    "# Predict from the model"
+    "# Predict from the model using jaxlogit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
+   "id": "fd0e5669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model_jax \n",
+    "init_coeff = init_coeff_x # choose which params to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
@@ -253,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "id": "2c848649",
    "metadata": {},
    "outputs": [
@@ -261,8 +282,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.99722437 -0.21967635  2.29019256  1.69431961 -9.67539134 -9.69620866\n",
-      " -1.39844447 -0.67502234  1.60015514  0.8837811   2.16735603  1.22957323]\n"
+      "[-0.99718604 -0.21966612  2.29028615  1.69430084 -9.67515876 -9.69600385\n",
+      "  0.22071409  0.41156706  1.7840999   1.22968056  2.27591004  1.48629077]\n"
      ]
     }
    ],
@@ -273,12 +294,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob = model.predict(X, varnames, alts, ids, randvars, config)"
+    "prob_xj = model.predict(X, varnames, alts, ids, randvars, config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64941385",
+   "metadata": {},
+   "source": [
+    "# Predict from the model using xlogit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fa92d333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model_x \n",
+    "init_coeff = init_coeff_jax # choose which params to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "32e13c4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, prob_jx = model.predict(X, varnames, alts, ids, isvars=None, panels=panels, n_draws=n_draws, return_proba=True)\n",
+    "# X, varnames, alts, ids, panels=panels, n_draws=n_draws, return_proba=True"
    ]
   },
   {
@@ -286,7 +337,7 @@
    "id": "07264a12",
    "metadata": {},
    "source": [
-    "Test the results"
+    "# Test the results"
    ]
   },
   {
@@ -332,29 +383,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "3f9074aa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Found input variables with inconsistent numbers of samples: [4308, 17232]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43msklearn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmetrics\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbrier_score_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprob\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/sklearn/utils/_param_validation.py:218\u001b[39m, in \u001b[36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    212\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    213\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m    214\u001b[39m         skip_parameter_validation=(\n\u001b[32m    215\u001b[39m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m    216\u001b[39m         )\n\u001b[32m    217\u001b[39m     ):\n\u001b[32m--> \u001b[39m\u001b[32m218\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    219\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    220\u001b[39m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[32m    221\u001b[39m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[32m    222\u001b[39m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[32m    223\u001b[39m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[32m    224\u001b[39m     msg = re.sub(\n\u001b[32m    225\u001b[39m         \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mparameter of \u001b[39m\u001b[33m\\\u001b[39m\u001b[33mw+ must be\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    226\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc.\u001b[34m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m must be\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    227\u001b[39m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[32m    228\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/sklearn/metrics/_classification.py:3777\u001b[39m, in \u001b[36mbrier_score_loss\u001b[39m\u001b[34m(y_true, y_proba, sample_weight, pos_label, labels, scale_by_half)\u001b[39m\n\u001b[32m   3773\u001b[39m     transformed_labels, y_proba = _validate_binary_probabilistic_prediction(\n\u001b[32m   3774\u001b[39m         y_true, y_proba, sample_weight, pos_label\n\u001b[32m   3775\u001b[39m     )\n\u001b[32m   3776\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3777\u001b[39m     transformed_labels, y_proba = \u001b[43m_validate_multiclass_probabilistic_prediction\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   3778\u001b[39m \u001b[43m        \u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_proba\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\n\u001b[32m   3779\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3781\u001b[39m transformed_labels = xp.astype(transformed_labels, y_proba.dtype, copy=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m   3782\u001b[39m brier_score = _average(\n\u001b[32m   3783\u001b[39m     xp.sum((transformed_labels - y_proba) ** \u001b[32m2\u001b[39m, axis=\u001b[32m1\u001b[39m), weights=sample_weight\n\u001b[32m   3784\u001b[39m )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/sklearn/metrics/_classification.py:283\u001b[39m, in \u001b[36m_validate_multiclass_probabilistic_prediction\u001b[39m\u001b[34m(y_true, y_prob, sample_weight, labels)\u001b[39m\n\u001b[32m    280\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m xp.min(y_prob) < \u001b[32m0\u001b[39m:\n\u001b[32m    281\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33my_prob contains values lower than 0: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mxp.min(y_prob)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m283\u001b[39m \u001b[43mcheck_consistent_length\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_prob\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    284\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sample_weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    285\u001b[39m     _check_sample_weight(sample_weight, y_prob, force_float_dtype=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/sklearn/utils/validation.py:464\u001b[39m, in \u001b[36mcheck_consistent_length\u001b[39m\u001b[34m(*arrays)\u001b[39m\n\u001b[32m    462\u001b[39m lengths = [_num_samples(X) \u001b[38;5;28;01mfor\u001b[39;00m X \u001b[38;5;129;01min\u001b[39;00m arrays \u001b[38;5;28;01mif\u001b[39;00m X \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[32m    463\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(lengths)) > \u001b[32m1\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m464\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    465\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    466\u001b[39m         % [\u001b[38;5;28mint\u001b[39m(l) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m lengths]\n\u001b[32m    467\u001b[39m     )\n",
-      "\u001b[31mValueError\u001b[39m: Found input variables with inconsistent numbers of samples: [4308, 17232]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6275143823422479\n"
      ]
     }
    ],
    "source": [
     "y = np.reshape(y, (prob.shape[0], -1))\n",
     "print(sklearn.metrics.brier_score_loss(y, prob))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "03a656ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6275143437134769\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.reshape(y, (prob_xx.shape[0], -1))\n",
+    "print(sklearn.metrics.brier_score_loss(y, prob_xx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "11333597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6275143437134769\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.reshape(y, (prob_jx.shape[0], -1))\n",
+    "print(sklearn.metrics.brier_score_loss(y, prob_jx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7c50c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.reshape(y, (prob_xj.shape[0], -1))\n",
+    "print(sklearn.metrics.brier_score_loss(y, prob_xj))"
    ]
   },
   {
