--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f9037572",
+   "metadata": {},
+   "source": [
+    "# Summary of time taken and brier scores for jaxlogit, xlogit, and biogeme\n",
+    "Where the estimation is taking place on the same data used to train\n",
+    "\n",
+    "| | jaxlogit | xlogit | biogeme |\n",
+    "|---|---|---|---|\n",
+    "|Making Model | 43.9s | 18.22s | 4:24 |\n",
+    "|Estimating | 1.4s | 0.2s | 1:07 |\n",
+    "|Brier Score | 0.6275 | 0.6275 | 0.62714 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31b2ad5e",
    "metadata": {},
    "source": [
@@ -10,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
@@ -22,16 +37,8 @@
     "import xlogit\n",
     "import sklearn\n",
     "\n",
-    "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "91efb1bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
+    "\n",
     "#  64bit precision\n",
     "jax.config.update(\"jax_enable_x64\", True)"
    ]
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -85,16 +92,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "c96d7b11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = df['choice']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "80a8c388",
    "metadata": {},
@@ -104,51 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-      "    Iterations: 80\n",
-      "    Function evaluations: 97\n",
-      "Estimation time= 39.0 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9972244     1.0000000    -0.9972244         0.319    \n",
-      "cl                     -0.2196763     1.0000000    -0.2196763         0.826    \n",
-      "loc                     2.2901926     1.0000000     2.2901926        0.0221 *  \n",
-      "wk                      1.6943196     1.0000000     1.6943196        0.0903 .  \n",
-      "tod                    -9.6753913     1.0000000    -9.6753913       6.4e-22 ***\n",
-      "seas                   -9.6962087     1.0000000    -9.6962087      5.24e-22 ***\n",
-      "sd.pf                  -1.3984445     1.0000000    -1.3984445         0.162    \n",
-      "sd.cl                  -0.6750223     1.0000000    -0.6750223           0.5    \n",
-      "sd.loc                  1.6001551     1.0000000     1.6001551          0.11    \n",
-      "sd.wk                   0.8837811     1.0000000     0.8837811         0.377    \n",
-      "sd.tod                  2.1673560     1.0000000     2.1673560        0.0303 *  \n",
-      "sd.seas                 1.2295732     1.0000000     1.2295732         0.219    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3888.465\n",
-      "AIC= 7800.930\n",
-      "BIC= 7877.349\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_jax.fit(\n",
     "    X=X,\n",
@@ -160,7 +116,7 @@
     "    config=config\n",
     ")\n",
     "display(model_jax.summary())\n",
-    "init_coeff_jax = model_jax.coeff_"
+    "init_coeff_j = model_jax.coeff_"
    ]
   },
   {
@@ -173,52 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-      "    Iterations: 54\n",
-      "    Function evaluations: 60\n",
-      "Estimation time= 15.9 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9971860     1.0000000    -0.9971860         0.319    \n",
-      "cl                     -0.2196661     1.0000000    -0.2196661         0.826    \n",
-      "loc                     2.2902861     1.0000000     2.2902861        0.0221 *  \n",
-      "wk                      1.6943008     1.0000000     1.6943008        0.0903 .  \n",
-      "tod                    -9.6751588     1.0000000    -9.6751588      6.42e-22 ***\n",
-      "seas                   -9.6960039     1.0000000    -9.6960039      5.25e-22 ***\n",
-      "sd.pf                   0.2207141     1.0000000     0.2207141         0.825    \n",
-      "sd.cl                   0.4115671     1.0000000     0.4115671         0.681    \n",
-      "sd.loc                  1.7840999     1.0000000     1.7840999        0.0745 .  \n",
-      "sd.wk                   1.2296806     1.0000000     1.2296806         0.219    \n",
-      "sd.tod                  2.2759100     1.0000000     2.2759100        0.0229 *  \n",
-      "sd.seas                 1.4862908     1.0000000     1.4862908         0.137    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3888.465\n",
-      "AIC= 7800.930\n",
-      "BIC= 7877.349\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_x.fit(\n",
     "    X=X,\n",
@@ -247,59 +161,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "fd0e5669",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = model_jax \n",
-    "init_coeff = init_coeff_x # choose which params to use"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = model_jax \n",
     "config = ConfigData(\n",
     "    panels=panels,\n",
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
     "    optim_method=\"L-BFGS-B\",\n",
-    ")"
+    ")\n",
+    "config.init_coeff = init_coeff_j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "2c848649",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.99718604 -0.21966612  2.29028615  1.69430084 -9.67515876 -9.69600385\n",
-      "  0.22071409  0.41156706  1.7840999   1.22968056  2.27591004  1.48629077]\n"
-     ]
-    }
-   ],
-   "source": [
-    "config.init_coeff = init_coeff\n",
-    "print(config.init_coeff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_xj = model.predict(X, varnames, alts, ids, randvars, config)"
+    "prob_jj = model.predict(X, varnames, alts, ids, randvars, config)"
    ]
   },
   {
@@ -312,24 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "fa92d333",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = model_x \n",
-    "init_coeff = init_coeff_jax # choose which params to use"
+    "# model = model_x \n",
+    "# init_coeff = init_coeff_x # choose which params to use\n",
+    "# TODO: remove!!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, prob_jx = model.predict(X, varnames, alts, ids, isvars=None, panels=panels, n_draws=n_draws, return_proba=True)\n",
-    "# X, varnames, alts, ids, panels=panels, n_draws=n_draws, return_proba=True"
+    "model = model_x\n",
+    "_, prob_xx = model.predict(X, varnames, alts, ids, isvars=None, panels=panels, n_draws=n_draws, return_proba=True)"
    ]
   },
   {
@@ -338,25 +224,6 @@
    "metadata": {},
    "source": [
     "# Test the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "416c5aee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = np.reshape(y, (prob.shape[0], -1))\n",
-    "\n",
-    "total_counted = 0\n",
-    "correct = 0\n",
-    "for i in range(prob.shape[0]):\n",
-    "    y_index = np.argmax(y[i])\n",
-    "    if prob[i][y_index] == np.max(prob[i]):\n",
-    "        correct += 1\n",
-    "    total_counted += 1\n",
-    "print(f\"percentage correct = {correct/total_counted}\")"
    ]
   },
   {
@@ -377,84 +244,288 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "prob = prob_jj\n",
     "for i in range(prob.shape[0]):\n",
     "    print(f\"{prob[i]} : {y[i]}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "3f9074aa",
+   "cell_type": "markdown",
+   "id": "a6ad9c80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6275143823422479\n"
-     ]
-    }
-   ],
    "source": [
-    "y = np.reshape(y, (prob.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob))"
+    "Compute the brier score:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
+   "id": "3f9074aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.reshape(y, (prob_jj.shape[0], -1))\n",
+    "print(sklearn.metrics.brier_score_loss(y, prob_jj))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "03a656ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6275143437134769\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = np.reshape(y, (prob_xx.shape[0], -1))\n",
     "print(sklearn.metrics.brier_score_loss(y, prob_xx))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "11333597",
+   "cell_type": "markdown",
+   "id": "80047997",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6275143437134769\n"
-     ]
-    }
-   ],
    "source": [
-    "y = np.reshape(y, (prob_jx.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob_jx))"
+    "# Setup Biogeme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "13b94508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import biogeme.biogeme_logging as blog\n",
+    "import biogeme.biogeme as bio\n",
+    "from biogeme import models\n",
+    "from biogeme.expressions import Beta, bioDraws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
+    "import biogeme.database as db\n",
+    "from biogeme.expressions import Variable\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pathlib\n",
+    "import sklearn\n",
+    "\n",
+    "logger = blog.get_screen_logger()\n",
+    "logger.setLevel(blog.ERROR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7c50c65",
+   "id": "c56cca0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = np.reshape(y, (prob_xj.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob_xj))"
+    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
+    "df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
+    "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
+    "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
+    "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
+    "df_wide.columns = [f'{var}_{alt}' for var, alt in df_wide.columns]\n",
+    "df_wide = df_wide.reset_index()\n",
+    "df = df_wide.merge(\n",
+    "    choice_df,\n",
+    "    on=['id', 'chid'],\n",
+    "    how='inner',\n",
+    "    validate='one_to_one'\n",
+    ")\n",
+    "\n",
+    "database = db.Database('electricity', df)\n",
+    "database.panel('id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d45e23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = {\n",
+    "    name: {\n",
+    "        j: Variable(f\"{name}_{j}\")\n",
+    "        for j in [1,2,3,4]\n",
+    "    }\n",
+    "    for name in varnames\n",
+    "}\n",
+    "\n",
+    "alt_1 = Beta('alt_1', 0, None, None, 0)\n",
+    "alt_2 = Beta('alt_2', 0, None, None, 0)\n",
+    "alt_3 = Beta('alt_3', 0, None, None, 0)\n",
+    "alt_4 = Beta('alt_4', 0, None, None, 1)\n",
+    "\n",
+    "pf_mean = Beta('pf_mean', 0, None, None, 0)\n",
+    "pf_sd = Beta('pf_sd', 1, None, None, 0)\n",
+    "cl_mean = Beta('cl_mean', 0, None, None, 0)\n",
+    "cl_sd = Beta('cl_sd', 1, None, None, 0)\n",
+    "loc_mean = Beta('loc_mean', 0, None, None, 0)\n",
+    "loc_sd = Beta('loc_sd', 1, None, None, 0)\n",
+    "wk_mean = Beta('wk_mean', 0, None, None, 0)\n",
+    "wk_sd = Beta('wk_sd', 1, None, None, 0)\n",
+    "tod_mean = Beta('tod_mean', 0, None, None, 0)\n",
+    "tod_sd = Beta('tod_sd', 1, None, None, 0)\n",
+    "seas_mean = Beta('seas_mean', 0, None, None, 0)\n",
+    "seas_sd = Beta('seas_sd', 1, None, None, 0)\n",
+    "\n",
+    "pf_rnd = pf_mean + pf_sd * bioDraws('pf_rnd', 'NORMAL')\n",
+    "cl_rnd = cl_mean + cl_sd * bioDraws('cl_rnd', 'NORMAL')\n",
+    "loc_rnd = loc_mean + loc_sd * bioDraws('loc_rnd', 'NORMAL')\n",
+    "wk_rnd = wk_mean + wk_sd * bioDraws('wk_rnd', 'NORMAL')\n",
+    "tod_rnd = tod_mean + tod_sd * bioDraws('tod_rnd', 'NORMAL')\n",
+    "seas_rnd = seas_mean + seas_sd * bioDraws('seas_rnd', 'NORMAL')\n",
+    "\n",
+    "choice = Variable('choice')\n",
+    "\n",
+    "V = {\n",
+    "    j: pf_rnd * X['pf'][j] + cl_rnd * X['cl'][j] + loc_rnd * X['loc'][j] + wk_rnd * X['wk'][j] + tod_rnd * X['tod'][j] + seas_rnd * X['seas'][j]\n",
+    "    for j in [1,2,3,4]\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6af2f635",
+   "id": "495ef383",
    "metadata": {},
    "source": [
-    "# Don't forget to clear output when done"
+    "# Make the Biogeme Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5155f664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = models.logit(V, None, choice)\n",
+    "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
+    "\n",
+    "the_biogeme = bio.BIOGEME(\n",
+    "    database, logprob, number_of_draws=n_draws, seed=999\n",
+    ")\n",
+    "the_biogeme.model_name = 'test'\n",
+    "the_biogeme.model_name = 'model_b'\n",
+    "results = the_biogeme.estimate()\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c1bc2d",
+   "metadata": {},
+   "source": [
+    "# Predict using Biogeme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eecf3cbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database_sim = db.Database('electricity', df)\n",
+    "\n",
+    "P = {\n",
+    "    j: MonteCarlo(models.logit(V, None, j))\n",
+    "    for j in [1, 2, 3, 4]\n",
+    "}\n",
+    "\n",
+    "simulate = {\n",
+    "    f'Prob_alt{j}': P[j]\n",
+    "    for j in [1, 2, 3, 4]\n",
+    "}\n",
+    "\n",
+    "biogeme_sim = bio.BIOGEME(database_sim, simulate)\n",
+    "biogeme_sim.model_name = 'per_choice_probs'\n",
+    "\n",
+    "probs = biogeme_sim.simulate(results.get_beta_values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4cfaddd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df['choice']\n",
+    "print(sklearn.metrics.brier_score_loss(y, probs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "707dfa0f",
+   "metadata": {},
+   "source": [
+    "# Test the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "160d014b",
+   "metadata": {},
+   "source": [
+    "Compare the probabilities and results\n",
+    "\n",
+    "Format:\n",
+    "[prob prob ... prob] : [which chosen]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae6eb42e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = prob_jj\n",
+    "for i in range(prob.shape[0]):\n",
+    "    print(f\"{prob[i]} : {y[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6f5e132",
+   "metadata": {},
+   "source": [
+    "Compute the brier score:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe21d12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jaxlogit\n",
+    "y = np.reshape(y, (prob_jj.shape[0], -1))\n",
+    "print(sklearn.metrics.brier_score_loss(y, prob_jj))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8afaa3de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# xlogit\n",
+    "y = np.reshape(y, (prob_xx.shape[0], -1))\n",
+    "print(sklearn.metrics.brier_score_loss(y, prob_xx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24716456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Biogeme\n",
+    "y = df['choice']\n",
+    "print(sklearn.metrics.brier_score_loss(y, probs))"
    ]
   }
  ],
