finalise clean predict example

--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -101,10 +101,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 80\n",
+      "    Function evaluations: 97\n",
+      "Estimation time= 41.4 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.9972244     1.0000000    -0.9972244         0.319    \n",
+      "cl                     -0.2196763     1.0000000    -0.2196763         0.826    \n",
+      "loc                     2.2901926     1.0000000     2.2901926        0.0221 *  \n",
+      "wk                      1.6943196     1.0000000     1.6943196        0.0903 .  \n",
+      "tod                    -9.6753913     1.0000000    -9.6753913       6.4e-22 ***\n",
+      "seas                   -9.6962087     1.0000000    -9.6962087      5.24e-22 ***\n",
+      "sd.pf                  -1.3984445     1.0000000    -1.3984445         0.162    \n",
+      "sd.cl                  -0.6750223     1.0000000    -0.6750223           0.5    \n",
+      "sd.loc                  1.6001551     1.0000000     1.6001551          0.11    \n",
+      "sd.wk                   0.8837811     1.0000000     0.8837811         0.377    \n",
+      "sd.tod                  2.1673560     1.0000000     2.1673560        0.0303 *  \n",
+      "sd.seas                 1.2295732     1.0000000     1.2295732         0.219    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3888.465\n",
+      "AIC= 7800.930\n",
+      "BIC= 7877.349\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_jax.fit(\n",
     "    X=X,\n",
@@ -129,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e89a636c",
    "metadata": {},
    "outputs": [],
@@ -179,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
@@ -198,85 +239,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa92d333",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model = model_x \n",
-    "# init_coeff = init_coeff_x # choose which params to use\n",
-    "# TODO: remove!!!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = model_x\n",
     "_, prob_xx = model.predict(X, varnames, alts, ids, isvars=None, panels=panels, n_draws=n_draws, return_proba=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07264a12",
-   "metadata": {},
-   "source": [
-    "# Test the results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2e2e8d9",
-   "metadata": {},
-   "source": [
-    "Compare the probabilities and results\n",
-    "\n",
-    "Format:\n",
-    "[prob prob ... prob] : [which chosen]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "697c6619",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob = prob_jj\n",
-    "for i in range(prob.shape[0]):\n",
-    "    print(f\"{prob[i]} : {y[i]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6ad9c80",
-   "metadata": {},
-   "source": [
-    "Compute the brier score:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "3f9074aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = np.reshape(y, (prob_jj.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob_jj))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "03a656ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = np.reshape(y, (prob_xx.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob_xx))"
    ]
   },
   {
@@ -289,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "13b94508",
    "metadata": {},
    "outputs": [],
@@ -401,9 +369,8 @@
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
     "\n",
     "the_biogeme = bio.BIOGEME(\n",
-    "    database, logprob, number_of_draws=n_draws, seed=999\n",
+    "    database, logprob, number_of_draws=n_draws, seed=999, generate_yaml=False, generate_html=False\n",
     ")\n",
-    "the_biogeme.model_name = 'test'\n",
     "the_biogeme.model_name = 'model_b'\n",
     "results = the_biogeme.estimate()\n",
     "print(results)"
@@ -443,19 +410,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "4cfaddd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = df['choice']\n",
-    "print(sklearn.metrics.brier_score_loss(y, probs))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "707dfa0f",
+   "id": "831c32d5",
    "metadata": {},
    "source": [
     "# Test the results"
@@ -463,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160d014b",
+   "id": "f04012e3",
    "metadata": {},
    "source": [
     "Compare the probabilities and results\n",
@@ -475,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6eb42e",
+   "id": "f8683480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f5e132",
+   "id": "fd8ed0ef",
    "metadata": {},
    "source": [
     "Compute the brier score:"
@@ -495,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe21d12d",
+   "id": "82021295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8afaa3de",
+   "id": "a8c30e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24716456",
+   "id": "4f1b12c4",
    "metadata": {},
    "outputs": [],
    "source": [
