Change readme and add it to documentation. Change autosummary in documentation

--- a/examples/mixed_logit_correlated_example.ipynb
+++ b/examples/mixed_logit_correlated_example.ipynb
@@ -258,13 +258,13 @@
       "outputs": [],
       "source": [
         "varnames=['ASC_CAR', 'ASC_TRAIN', 'ASC_SM', 'CO', 'TT']\n",
-        "fixedvars = {'ASC_SM': 0.0}  # Fixing parameters\n",
+        "set_vars = {'ASC_SM': 0.0}  # Fixing parameters\n",
         "model = MixedLogit()\n",
         "\n",
         "config = ConfigData(\n",
         "    avail=df['AV'],\n",
         "    panels=df[\"ID\"],\n",
-        "    fixedvars=fixedvars,\n",
+        "    set_vars=set_vars,\n",
         "    n_draws=1500,\n",
         ")\n",
         "\n",
@@ -296,7 +296,7 @@
         "varnames=['ASC_CAR', 'ASC_TRAIN', 'ASC_SM', 'CO', 'TT']\n",
         "\n",
         "randvars={'ASC_CAR': 'n', 'ASC_TRAIN': 'n', 'ASC_SM': 'n'}\n",
-        "fixedvars = {\n",
+        "set_vars = {\n",
         "    'ASC_SM': 0.0, 'sd.ASC_TRAIN': 1.0, 'sd.ASC_CAR': 0.0,\n",
         "    'chol.ASC_CAR.ASC_TRAIN': 0.0, 'chol.ASC_CAR.ASC_SM': 0.0\n",
         "}  # Identification of error components, see J. Walker's PhD thesis (MIT 2001)\n",
@@ -304,8 +304,7 @@
         "config = ConfigData(\n",
         "    avail=df['AV'],\n",
         "    panels=df[\"ID\"],\n",
-        "    fixedvars=fixedvars,\n",
-        "    n_draws=1500,\n",
+        "    set_vars=set_vars,\n",
         "    include_correlations=True,  # Enable correlation between random parameters\n",
         ")\n",
         "\n",
