Finalise predict example

--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
@@ -48,24 +48,26 @@
    "id": "49263ce0",
    "metadata": {},
    "source": [
-    "# Get the full electricity dataset"
+    "# Get the full electricity dataset\n",
+    "\n",
+    "Use for jaxlogit and xlogit. Adjustusting n_draws can improve accuracy, but Biogeme cannot handle 700 or more draws with this data set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
     "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
-    "n_draws = 600"
+    "n_draws = 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -96,56 +98,15 @@
    "id": "80a8c388",
    "metadata": {},
    "source": [
-    "# Make the model in jaxlogit"
+    "Make the model in jaxlogit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-      "    Iterations: 80\n",
-      "    Function evaluations: 97\n",
-      "Estimation time= 41.4 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9972244     1.0000000    -0.9972244         0.319    \n",
-      "cl                     -0.2196763     1.0000000    -0.2196763         0.826    \n",
-      "loc                     2.2901926     1.0000000     2.2901926        0.0221 *  \n",
-      "wk                      1.6943196     1.0000000     1.6943196        0.0903 .  \n",
-      "tod                    -9.6753913     1.0000000    -9.6753913       6.4e-22 ***\n",
-      "seas                   -9.6962087     1.0000000    -9.6962087      5.24e-22 ***\n",
-      "sd.pf                  -1.3984445     1.0000000    -1.3984445         0.162    \n",
-      "sd.cl                  -0.6750223     1.0000000    -0.6750223           0.5    \n",
-      "sd.loc                  1.6001551     1.0000000     1.6001551          0.11    \n",
-      "sd.wk                   0.8837811     1.0000000     0.8837811         0.377    \n",
-      "sd.tod                  2.1673560     1.0000000     2.1673560        0.0303 *  \n",
-      "sd.seas                 1.2295732     1.0000000     1.2295732         0.219    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3888.465\n",
-      "AIC= 7800.930\n",
-      "BIC= 7877.349\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_jax.fit(\n",
     "    X=X,\n",
@@ -165,7 +126,7 @@
    "id": "fc53d9f8",
    "metadata": {},
    "source": [
-    "# Make the model in xlogit"
+    "Make the model in xlogit"
    ]
   },
   {
@@ -197,7 +158,7 @@
    "id": "1d7bcacd",
    "metadata": {},
    "source": [
-    "# Predict from the model using jaxlogit"
+    "Predict from the model using jaxlogit"
    ]
   },
   {
@@ -233,7 +194,7 @@
    "id": "64941385",
    "metadata": {},
    "source": [
-    "# Predict from the model using xlogit"
+    "Predict from the model using xlogit"
    ]
   },
   {
@@ -252,12 +213,12 @@
    "id": "80047997",
    "metadata": {},
    "source": [
-    "# Setup Biogeme"
+    "# Biogeme"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "13b94508",
    "metadata": {},
    "outputs": [],
@@ -265,7 +226,7 @@
     "import biogeme.biogeme_logging as blog\n",
     "import biogeme.biogeme as bio\n",
     "from biogeme import models\n",
-    "from biogeme.expressions import Beta, bioDraws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
+    "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
     "import biogeme.database as db\n",
     "from biogeme.expressions import Variable\n",
     "import pandas as pd\n",
@@ -274,12 +235,12 @@
     "import sklearn\n",
     "\n",
     "logger = blog.get_screen_logger()\n",
-    "logger.setLevel(blog.ERROR)"
+    "logger.setLevel(blog.INFO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c56cca0f",
    "metadata": {},
    "outputs": [],
@@ -304,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e6d45e23",
    "metadata": {},
    "outputs": [],
@@ -335,12 +296,12 @@
     "seas_mean = Beta('seas_mean', 0, None, None, 0)\n",
     "seas_sd = Beta('seas_sd', 1, None, None, 0)\n",
     "\n",
-    "pf_rnd = pf_mean + pf_sd * bioDraws('pf_rnd', 'NORMAL')\n",
-    "cl_rnd = cl_mean + cl_sd * bioDraws('cl_rnd', 'NORMAL')\n",
-    "loc_rnd = loc_mean + loc_sd * bioDraws('loc_rnd', 'NORMAL')\n",
-    "wk_rnd = wk_mean + wk_sd * bioDraws('wk_rnd', 'NORMAL')\n",
-    "tod_rnd = tod_mean + tod_sd * bioDraws('tod_rnd', 'NORMAL')\n",
-    "seas_rnd = seas_mean + seas_sd * bioDraws('seas_rnd', 'NORMAL')\n",
+    "pf_rnd = pf_mean + pf_sd * Draws('pf_rnd', 'NORMAL')\n",
+    "cl_rnd = cl_mean + cl_sd * Draws('cl_rnd', 'NORMAL')\n",
+    "loc_rnd = loc_mean + loc_sd * Draws('loc_rnd', 'NORMAL')\n",
+    "wk_rnd = wk_mean + wk_sd * Draws('wk_rnd', 'NORMAL')\n",
+    "tod_rnd = tod_mean + tod_sd * Draws('tod_rnd', 'NORMAL')\n",
+    "seas_rnd = seas_mean + seas_sd * Draws('seas_rnd', 'NORMAL')\n",
     "\n",
     "choice = Variable('choice')\n",
     "\n",
@@ -351,19 +312,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "495ef383",
-   "metadata": {},
-   "source": [
-    "# Make the Biogeme Model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5155f664",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The number of draws (700) is low. The results may not be meaningful. \n",
+      "The number of draws (700) is low. The results may not be meaningful. \n"
+     ]
+    }
+   ],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
@@ -374,14 +336,6 @@
     "the_biogeme.model_name = 'model_b'\n",
     "results = the_biogeme.estimate()\n",
     "print(results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74c1bc2d",
-   "metadata": {},
-   "source": [
-    "# Predict using Biogeme"
    ]
   },
   {
@@ -482,6 +436,14 @@
     "# Biogeme\n",
     "y = df['choice']\n",
     "print(sklearn.metrics.brier_score_loss(y, probs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "223a36f4",
+   "metadata": {},
+   "source": [
+    "# Test maximum number of draws for biogeme"
    ]
   }
  ],
